--- a/second_task/design.css
+++ b/second_task/design.css
@@ -7,6 +7,19 @@ body {
     position: relative;
 }
 
+h5 {
+    width: 455px;
+    height: 70px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 56px;
+    align-items: center;
+    text-align: center;
+    color: #434966;
+}
+
 .ticket-background {
     display: flex;
     margin: auto;
@@ -19,6 +32,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     justify-content: center;
+    column-count: 1;
 }
 
 .logo {
@@ -43,4 +57,31 @@ body {
     right: 0.04%;
     top: 87.63%;
     bottom: 0.01%;
+}
+
+.ticket-no-container {
+    position: absolute;
+    width: 131.09px;
+    height: 17px;
+    left: 174px;
+    top: 119px;
+}
+
+.info-text {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    /* identical to box height */
+    color: #000000;
+}
+
+.expo-text {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 13px;
+    line-height: 15px;
+    color: #434966;
 }
