--- a/third_task/design.css
+++ b/third_task/design.css
@@ -4,125 +4,178 @@
     box-sizing: border-box;
 }
 
-.main {
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 2%;
+.footer-container{
+    background-color: #F9F9FB;
+    padding-top: 70px;
+    padding-left: 190px;
+    padding-right: 190px;
+    padding-bottom: 33px;
 }
 
-.section01 {}
-
-.nav-top-bar {
+.footer-col1 {
     display: flex;
-    flex-flow: wrap;
-    flex-direction: row;
-    align-content: center;
-    align-items: center;
+    flex-direction: column;
+    width: 391px;
+    height: auto;
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 17px;
+    line-height: 28px;
+    color: #848484;
+    margin-right: 108px;
+    align-items: flex-start;
+}
+
+.footer-col2 {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 38px;
+    color: #848484;
+    align-items: flex-start;
+}
+
+.footer-row {
+    display: flex;
     justify-content: space-between;
+    overflow: auto;
+    /* margin: 70px 0px 167px 190px; */
 }
 
-.menu {
-    display: flex;
-    max-height: 60px;
-}
-
-.menu-button {
-    font-family: Inter;
+.footer-heading {
+    font-family: Mulish;
     font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 19px;
-    color: #B8BECD;
-    border: none;
-    background-color: white;
-    padding: 0 10px;
-}
-
-.menu-button-selected {
-    font-weight: 500;
-    color: #202336;
-}
-
-.login-register-button {
-    border: 1px solid #FB8F1D;
-    box-sizing: border-box;
-    border-radius: 8px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
+    font-weight: bold;
+    font-size: 19px;
     line-height: 60px;
+    color: #000000;
+}
+
+.footer-text {
+    margin-top: 26px;
+    margin-bottom: 55px;
+}
+
+.footer-rectangle {
+    width: auto;
+    height: 1px;
+    background-color: #C4C4C4;
+    margin-top: 77px;
+    margin-bottom: 35px;
+}
+
+.footer-icons {
+    width: auto;
     display: flex;
-    text-align: center;
-    padding: 0 10px;
-    margin: 0 10px;
+    justify-content: center;
+    gap: 35px;
 }
 
-.login {
-    color: #FB8F1D;
-    background-color: white;
-    padding: 0px 50px 0px 50px;
+.trending-stories-container {
+    margin-right: 235px;
+    margin-left: 143px;
+    margin-bottom: 196px;
+    padding-left: 97px;
 }
 
-.register {
-    color: white;
-    background-color: #FB8F1D;
-    padding: 0px 50px 0px 50px;
-}
-
-.section01-content-wrapper {
-    margin-top: 5%;
-    display: flex;
-}
-
-.info-wrapper {
-    flex: 1;
-}
-
-.image-wrapper {
-    flex: 1;
-}
-
-.info-text {
-    margin-top: 10%;
-}
-
-.text-header1 {
+.trending-stories-h1 {
     font-family: Playfair Display;
     font-style: normal;
     font-weight: bold;
-    font-size: 64px;
-    line-height: 80px;
-    color: #202336;
+    font-size: 36px;
+    line-height: 50px;
+    color: #000000;
 }
 
-.img-sec-01 {
-    width: 100%;
-}
-
-.text-header2 {
+.trending-stories-viewAll {
     font-family: Inter;
     font-style: normal;
     font-weight: 600;
-    font-size: 22px;
-    line-height: 27px;
-    color: #202336;
-    margin-top: 10%;
+    font-size: 17px;
+    line-height: 60px;
+    color: #FB8F1D;
 }
 
-.seperation-line {
-    width: 32px;
-    color: #202336;
-    border-bottom: 4px solid black;
-    margin-top: 5%;
+.trending-stories-heading-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 56px;
+    margin-top: 34px;
 }
 
-.selection-grid {
-    margin-top: 5%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px;
+.trending-stories-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 55px;
+    overflow: auto;
 }
 
-.dropdown-menu {}
+.trending-stories-columns {
+    width: 266px;
+    height: 100%;
+    padding-right: 1px;
+}
+
+.trending-stories-subheadings {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 19px;
+    line-height: 30px;
+    color: #000000;
+    margin-bottom: 13px;
+    
+}
+
+.trending-stories-img {
+    border-radius: 8px 8px 0 0;
+}
+
+.trending-stories-img-container {
+    width: 100%;
+    height: 233px;
+    overflow: hidden;
+}
+
+.trending-stories-readMore {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 28px;
+    color: #FB8F1D;
+}
+
+.trending-stories-texts {
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 26px;
+    color: #7D7987;
+}
+
+.trending-stories-plus-sign {
+    margin-left: -97px;
+    position: relative;
+    left: 41%;
+}
+
+.trending-stories-circle-1 {
+    position: relative;
+    left: -20px;
+    top: 425px;
+}
+
+.trending-stories-circle-2 {
+    position: relative;
+    left: 68.5%;
+    margin-left: -97px;
+}
