--- a/third_task/design.css
+++ b/third_task/design.css
@@ -125,4 +125,54 @@
     gap: 10px;
 }
 
-.dropdown-menu {}
+.custom-select {
+    width: 600px;
+    position: relative;
+    display: flex;
+}
+
+.explore {
+    color: white;
+    background-color: #FB8F1D;
+    margin-top: 5%;
+    display: inline-block;
+    padding: 0 60px;
+}
+
+.section02 {
+    display: flex;
+}
+
+.section02-image-wrapper {
+    flex: 0 0 50%;
+    width: 100%;
+}
+
+.section02-info-wrapper {
+    flex: 1;
+    margin-left: 5%;
+}
+
+.text-header2 {
+    font-family: Playfair Display;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 32px;
+    line-height: 80px;
+    color: #202336;
+}
+
+.mulish {
+    font-family: Mulish;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 17px;
+    line-height: 30px;
+    /* or 176% */
+    color: #7D7987;
+}
+
+.learnmorebutton {
+    margin-top: 5%;
+    margin-left: 0;
+}
