--- a/third_task/design.css
+++ b/third_task/design.css
@@ -209,3 +209,20 @@
     .featured-destinations-text {
         margin-top: 0;
     }
+    
+    select {
+        background-color: transparent;
+        border: 0.8px solid #AFB0B9;
+        border-radius: 6px;
+        margin: 0;
+        width: 100%;
+        height: 52px;
+        max-width: 250px;
+        font-family: Inter;
+        font-size: 15px;
+        cursor: inherit;
+        line-height: inherit;
+        outline: none;
+        align-items: center;
+        padding: 0.5em 3.5em 0.5em 1em;
+    }
